@startuml
class SanPham {
    - String maSP
    - String tenSP
    - int soLuong
    - double donGia
    + SanPham(String maSP, String tenSP, int soLuong, double donGia)
    + int getSoLuong()
    + double getDonGia()
    + void setSoLuong(int soLuong)
    + void setDonGia(double donGia)
    + String toString()
}

class DataAccess {
    - static DataAccess instance
    - List<SanPham> sanPhams
    - DataAccess()
    + static DataAccess getInstance()
    + void addSanPham(SanPham sanPham)
    + void removeSanPham(String maSP)
    + void updateSanPham(SanPham updatedSanPham)
    + List<SanPham> getSanPhams()
}

class DataAccessFactory {
    + static DataAccess createDataAccess(String type)
}

class UI {
    - String uiName
    + UI(String uiName)
    + void addSanPham(SanPham sanPham)
    + void removeSanPham(String maSP)
    + void updateSanPham(SanPham sanPham)
    + void displaySanPhams()
}

UI ..> DataAccess : uses
DataAccessFactory ..> DataAccess : creates
DataAccess ..> SanPham : manages

@enduml
